--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+                <p class="masthead-subheading font-weight-light mb-0">Artificial Intelligence - Industrial Robot Automation - Robot System Integration</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -126,7 +126,7 @@
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">RobotForward is a robotics engineers' group that can handle industrial and service robotics.ロボットフォーワードは。</p></div>
+                    <div class="col-lg-4 ml-auto"><p class="lead">RobotForward is a robotics engineers' group that can handle industrial and service robotics.</p></div>
                     <div class="col-lg-4 mr-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
                 </div>
                 <!-- About Section Button-->
